[fix] fix contrast of twitter card

--- a/src/.ignore/scss/bootstrap.custom.scss
+++ b/src/.ignore/scss/bootstrap.custom.scss
@@ -99,6 +99,8 @@ $filters: ("blur", 1px), ("brightness", .2);
     }
 }
 
+.text-gray700 { color: #495057; }
+
 .text-twitter { color: #1da1f2 !important; }
 .text-github { color: #333 !important; }
 .text-instagram { color: #c13584 !important; }
